# ov7670_mik32_driver

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  screen_saver.py
.devcontainer/: Dockerfile  devcontainer.json
cmake/: mik32_toolchain.cmake
hardware/: CMakeLists.txt
libs/: CMakeLists.txt
libs/ov7670/: ov7670.c  ov7670.h
libs/ov7670/arch/: mik32.c  mik32.h
ov7670/: CMakeLists.txt  ov7670.c  ov7670.h
ov7670/arch/: CMakeLists.txt  i2c_bitbang.c  i2c_bitbang.h  mik32.c  mik32.h  samd51.c  samd51.h  sccb.c  sccb.h  uart.c  uart.h
sources/: CMakeLists.txt  main.c
